# GLIBChecker

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: GLIBChecker.yml
src/: GlibChecker.cpp  GlibChecker.hpp  Utilities.cpp  Utilities.hpp  main.cpp
src/Utilities/: Utilities.cpp  Utilities.hpp
